# ClimateFinanceBERT-UI

./: .cz.toml  .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  test_app.py
climatefinancebert_ui/: app.py  main.py
climatefinancebert_ui/assets/: dashExtensions_default.js  style.css
climatefinancebert_ui/callbacks/: data_callbacks.py  general_callbacks.py  info_callbacks.py  map_callbacks.py
climatefinancebert_ui/components/: categories_dropdown.py  categories_sub_dropdown.py  constants.py  datatable.py  ids.py  info.py  info_box.py  infobox_adaptation.py  infobox_climatefinance.py  infobox_country.py  infobox_environment.py  infobox_mitigation.py  layout.py  map.py  map_mode.py  navbar.py  reset_button.py  sidebar.py  test_table.py  type_dropdown.py  utils.py  year_dropdown.py  year_slider.py
docker/: docker-compose.yml
docker/climatefinancebert_ui/: Dockerfile
notebooks/: data-loader.ipynb  duckdb.ipynb  duckdb_querying.ipynb  exploration.ipynb  riomarker.ipynb
src/: app.py
src/assets/: README.md  dashExtensions_default.js  map.css  style.css  variables.css
src/callbacks/: data_callbacks.py  download_callbacks.py  general_callbacks.py  info_callbacks.py  map_callbacks.py  page_callbacks.py
src/components/: action_button.py  categories_dropdown.py  categories_sub_dropdown.py  color_legend.py  constants.py  current_filters.py  dataset.py  datatable.py  donor_type_dropdown.py  flow_data_table.py  flow_type_dropdown.py  ids.py  infobox.py  infobox_adaptation.py  infobox_climatefinance.py  infobox_country.py  infobox_environment.py  infobox_mitigation.py  layout.py  map.py  map_mode.py  navbar.py  reset_button.py  sidebar.py  slider_player.py  timespan_slider.py  type_dropdown.py  utils.py  (+3 more)
tests/: README.md  __init__.py  conftest.py  test_app.py  test_components.py  test_data_operations.py  test_query_duckdb.py
(+27 files in other folders)
