[tool.poetry]
name = "climatefinancebert-ui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
polars = "^0.20.5"
dash-bootstrap-components = "^1.5.0"
dash-leaflet = "^1.0.15"
numpy = "^1.26.3"
pandas = "^2.2.0"
dash-extensions = "^1.0.8"
ruff = "^0.3.0"
commitizen = "^3.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
