[project]
name = "climatefinancebert-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash-extensions>=1.0.18",
    "dash-leaflet>=1.0.15",
    "dash>=2.18.2",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "duckdb>=1.2.1",
    "ruff==0.11.0",
    "emoji-country-flag>=2.0.1",
    "pycountry>=24.6.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
