[project]
name = "climatefinancebert-ui"
version = "1.0.0"
description = "An interactive dashboard for exploring and analyzing global climate finance data powered by the ClimateFinanceBERT model as described in Toetzke, M., Stünzi, A. & Egli, F. (2022)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash-extensions>=1.0.18",
    "dash-leaflet>=1.0.15",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "duckdb>=1.2.1",
    "emoji-country-flag>=2.0.1",
    "pycountry>=24.6.1",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "ruff>=0.11.11",
]
